tests/diag/hygiene-hint.err
tests/diag/hygiene-hint.id:5:1: error: unbound identifier 'hidden-fn'
  1 binding named 'hidden-fn' exists but is not visible here (hygiene scopes differ)
