tests/diag/hygiene-hint.id
defmacro m stx -> %`(do
    defn hidden-fn v -> v
  end)
m x
hidden-fn 1
